@@ -52,7 +52,8 @@ namespace KJS {
     class UString;
     struct HashTable;
 
-    struct JSGlobalData : public RefCounted<JSGlobalData> {
+    class JSGlobalData : public RefCounted<JSGlobalData> {
+    public:
         static PassRefPtr<JSGlobalData> create();
         ~JSGlobalData();
 
